# SteamAutoLogin_V2.0

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
auth/: SDA.py
client/: My_Exeptions.py  auth.py  client.py  config.ini  gui.py  input_guard.py  interface_for_var_acc.py  into_steam.py  main.py  network.py  steam_automation.py
output/client/: config.ini
output/server/: config_sda.ini
server/: SDA.py  account_manager.py  config_sda.ini  data_all.py  handlers.py  loger_data.py  main.py  network.py  sda_automation.py  server.py
shared/: __init__.py  auth.py  config.py  db.py  exceptions.py  logger.py  netutil.py  protocol.py
sockets/: client.py  config.ini  server.py
tests/: test_account_manager.py  test_auth.py  test_config.py  test_db.py  test_protocol.py
